[gd_scene load_steps=7 format=3 uid="uid://rbfhinkfolqo"]

[ext_resource type="Script" path="res://game/scenes/game_scenes/title_screen/title_screen.gd" id="1_qylio"]
[ext_resource type="Texture2D" uid="uid://byhjnt8sxglyf" path="res://game/global_sprites/backgrounds/papers.png" id="2_goyem"]
[ext_resource type="Script" path="res://samples/things/dashes_sprite/dashes_sprite.gd" id="3_rd0oe"]
[ext_resource type="Texture2D" uid="uid://lhc00q24wu43" path="res://game/scenes/objects/player/sprites/attributes/main_chracter.png" id="4_m7oek"]
[ext_resource type="PackedScene" uid="uid://bl228pekg5imo" path="res://game/scenes/game_scenes/title_screen/scenes/start_buttons.tscn" id="4_rp25m"]
[ext_resource type="PackedScene" uid="uid://dvqjcfutanpdl" path="res://game/scenes/game_scenes/title_screen/scenes/settings_buttons.tscn" id="12_bm4t4"]

[node name="TitleScreen" type="Node"]
script = ExtResource("1_qylio")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Papers" type="Sprite2D" parent="Background"]
process_mode = 3
scale = Vector2(4.18909, 3.54098)
texture = ExtResource("2_goyem")
centered = false
hframes = 3
script = ExtResource("3_rd0oe")
timer_wait_time = 0.25

[node name="Statics" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButtons" parent="Statics" instance=ExtResource("4_rp25m")]
layout_mode = 1
offset_top = -192.0
offset_bottom = -56.0

[node name="GameName" type="TextureRect" parent="Statics"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -331.5
offset_top = -292.0
offset_right = 331.5
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_m7oek")
expand_mode = 1
stretch_mode = 5

[node name="SettingsButtons" parent="Statics" instance=ExtResource("12_bm4t4")]
visible = false
layout_mode = 1

[node name="VersionLabel" type="Label" parent="Statics"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -32.0
offset_right = -11.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "version alpha 0.01"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CopyrightLabel" type="Label" parent="Statics"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -101.0
offset_top = -32.0
offset_right = 101.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "created by TeamMur & Davlenie"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameTitle" type="Label" parent="Statics"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.0
offset_top = 124.0
offset_right = 213.0
offset_bottom = 181.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 76
text = "DAZZLING ARMADILO"
horizontal_alignment = 1
